--- a/src/pages/Home/home.module.css
+++ b/src/pages/Home/home.module.css
@@ -2,11 +2,10 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    overflow-x: hidden;
 }
 
 .section {
-    width: auto;
+    width: 100%;
     min-height: 40vh;
     display: flex;
     align-items: center;
@@ -14,64 +13,96 @@
 }
 
 .sectionImage1 {
-    width: auto;
+    width: 100%;
     height: 100%;
-    background-image: url(src/assets/map-image.png);
+    background-image: url("/images/map-image.png");
     background-repeat: no-repeat;
     background-position: left;
 }
 
 .sectionImage2 {
-    width: auto;
+    width: 100%;
     height: 100%;
-    background-image: url(src/assets/trans-image.png);
+    background-image: url("/images/trans-image.png");
     background-repeat: no-repeat;
-    justify-self: right;
-}
-
-.sectionBody2 {
-    width: 100vh;
-    background: linear-gradient(90deg, rgba(233,197,104,1) 0%, rgba(255,255,255,0) 100%);
-    padding: 2rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    background-position: right;
 }
 
 .sectionBody1 {
     width: 100%;
-    background: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(255,115,92,1) 100%);
-    padding: 2rem;
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.contentWrapper {
+.sectionBody2 {
+    width: 100%;
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
-    text-align: center;
+}
+
+.contentWrapper2 {
+    display: flex;
+    flex-direction: column;
+    align-items: left;
     gap: 1rem;
+    margin-left: 5rem;
+    margin-top: 2rem;
+}
+
+.contentWrapper1 {
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    gap: 1rem;
+    margin-right: 5rem;
+    margin-top: 2rem;
 }
 
 .title {
     font-size: clamp(1.5rem, 4vw, 3rem);
     font-weight: bold;
-    margin-bottom: 1rem;
+    text-align: right;
 }
 
 .description {
     font-size: clamp(1rem, 2vw, 1.5rem);
-    max-width: 70vw;
-    text-align: center;
+    max-width: 45vw;
+    text-align: right;
 }
 
-.buttonWrapper {
+.title2 {
+    font-size: clamp(1.5rem, 4vw, 3rem);
+    font-weight: bold;
+    margin: 2rem 0;
+    text-align: left;
+}
+
+.description2 {
+    font-size: clamp(1rem, 2vw, 1.5rem);
+    max-width: 50vw;
+    text-align: left;
+}
+
+.buttonWrapper1 {
     display: flex;
     gap: 1rem;
     margin-top: 1rem;
+    margin-bottom: 3em;
+    margin-right: 20%;
 }
+
+.buttonWrapper2 {
+    display: flex;
+    gap: 1rem;
+    margin-top: 1rem;
+    margin-bottom: 3em;
+    margin-left: 20%;
+}
+
 
 .sectionButton2 {
     padding: 0.5rem 1rem;
