--- a/src/components/InternalMap/InternalMap.module.css
+++ b/src/components/InternalMap/InternalMap.module.css
@@ -1,4 +1,3 @@
-/* MapStyles.module.css */
 .container {
     height: 100vh;
     width: 100%;
@@ -107,4 +106,27 @@
 
 .toggleButtonMinimized:hover {
     background-color: #ca5c4b;
+}
+
+.pin {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    margin-left: 115px;
+
+    border-radius: 50%;
+    border: 8px solid #fff;
+    width: 8px;
+    height: 8px;
+}
+
+.pin::after {
+    position: absolute;
+    content: '';
+    width: 0px;
+    height: 0px;
+    bottom: -30px;
+    left: -6px;
+    border: 10px solid transparent;
+    border-top: 17px solid #fff;
 }
