--- a/src/components/DashboardHeader/dashboardHeader.module.css
+++ b/src/components/DashboardHeader/dashboardHeader.module.css
@@ -1,10 +1,11 @@
 .wrapper {
-    background-color: var(--c-lightBlue);
-    color: black;
+    background-color: var(--c-blue);
+    color: white;
     padding-left: 1vw;  
     width: 100%;
     height: 8%;
     display: flex;
+    justify-content: space-between position="relative";
     align-items: center;
     border-bottom: 2px solid #fff;
 }
@@ -15,7 +16,7 @@
 }
 
 .dbDivider {
-    background-color: black;
+    background-color: white;
     width: 0.3rem;
     height: 1.7vw;
     margin: 0 1.5rem;
