--- a/src/components/Sidebar/sidebar.module.css
+++ b/src/components/Sidebar/sidebar.module.css
@@ -30,10 +30,12 @@ a {
 .normalWrapper {
     justify-content: space-between;
     width: 100vw;
-    border-top-left-radius: 55px;
-    border-top-right-radius: 55px;
+    /* border-top-left-radius: 55px;
+    border-top-right-radius: 55px; */
+    padding-top: 1vw;
+    padding-bottom: 1vw;
     background-color: white;
-    border: 3px solid black;
+    border-top: 3px solid black;
     border-bottom: none;
 }
 
